--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">C</h2>
+    	<h2 style="color:#F2B300;">S</h2>
     </div>
     <div class="balloons text-center" id="b2">
     	<h2 style="color:#0719D4;">H</h2>
@@ -48,10 +48,10 @@
     	<h2 style="color:#8FAD00;">R</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">V</h2>
+    	<h2 style="color:#8377E4;">O</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">I</h2>
+    	<h2 style="color:#99C96A;">N</h2>
     </div>
     
 
