--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>You are the best</p>
-				<p>Loveyou....</p>
-				<p>a very happy birthday Di</p>
+				<p>Seeyou soon..</p>
+				<p>Happiest birthday topper..</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
