--- a/index.html
+++ b/index.html
@@ -36,23 +36,21 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">S</h2>
+    	<h2 style="color:#F2B300;">A</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">H</h2>
+    	<h2 style="color:#0719D4;">S</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">A</h2>
+    	<h2 style="color:#D14D39;">T</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">R</h2>
+    	<h2 style="color:#8FAD00;">H</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
-    <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">N</h2>
-    </div>
+    
     
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -149,7 +147,7 @@
 				<p>lastly...</p>
 				<p>You are the best</p>
 				<p>Seeyou soon..</p>
-				<p>Happiest birthday topper..</p>
+				<p>Happiest birthday Di..Loveya</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
